--- a/scss/config.scss
+++ b/scss/config.scss
@@ -11,10 +11,39 @@ $transition: 200ms ease-in-out 0s;
 $firstSwitch: 800px;
 $secondSwitch: 1200px;
 
+@mixin font1 {
+  font-size: 12px;
+}
+@mixin font2 {
+  font-size: 14px;
+}
+@mixin font3 {
+  font-size: 18px;
+}
+@mixin font4 {
+  font-size: 21px;
+}
+@mixin font5 {
+  font-size: 24px;
+}
+@mixin font6 {
+  font-size: 36px;
+}
+@mixin font7 {
+  font-size: 48px;
+}
+@mixin font8 {
+  font-size: 60px;
+}
+
 @mixin rounded {
     border: 1px solid #000;
     border-radius: 3px;
   }
+
+@mixin maxWidth {
+  max-width: 1200px;
+}
 
   .blue__button {
     background-color: $footerColor;
