--- a/scss/header.scss
+++ b/scss/header.scss
@@ -10,7 +10,7 @@
         font-family: "Oswald", sans-serif;
         .header{
             &__title{ 
-                font-size: 3.75em;
+                @include font8;
                 color: $blackText;
                 padding-top:10px;
             }
@@ -55,7 +55,7 @@
             font-family: "Oswald", sans-serif;
             .header{
                 &__title{ 
-                    font-size: 3.75em;
+                    @include font8;
                     color: $blackText;
                     padding-top:10px;
                 }
@@ -118,7 +118,7 @@
             font-family: "Oswald", sans-serif;
             .header{
                 &__title{ 
-                    font-size: 3.75em;
+                    @include font8;
                     color: $blackText;
                     padding-top:10px;
                 }
