Lagaði til kóðan fyrir headerinn og setti hann í header1 skrá, setti linkinn fyrir header scss ið sem header1.scss, setti breytingarnar fyrir headerinn inn á allar sípurnar

--- a/styles.scss
+++ b/styles.scss
@@ -24,7 +24,7 @@ main { /* stylelint-disable-line */
 
 // TODO sækja allar sass skrár
 // @import "scss/...";
-@import "scss/header.scss";
+@import "scss/header1.scss";
 @import "scss/footer.scss";
 @import "scss/vorur.scss";
 @import "scss/course.scss";
