byrjaði á README skránni og lagaði bilið milli header og vara íi vorur

--- a/scss/vorur.scss
+++ b/scss/vorur.scss
@@ -31,6 +31,7 @@
 .vorur {
   display: flex;
   justify-content: center;
+  margin-top: 2*$gutter;
   &__row {
     @include maxWidth;
     width: 100%;
