--- a/scss/course.scss
+++ b/scss/course.scss
@@ -3,6 +3,8 @@
 
 
 .course{
+
+  margin-top:2*$gutter;
   display: flex;
   justify-content: center;
 
@@ -17,7 +19,7 @@
   }
 &__box{
   margin-bottom:10px;
-  width:80%;
+  width:90%;
   @include rounded;
   padding:10px;
   &__full{
@@ -34,7 +36,7 @@
 }
 
 &__img {
-  width: 100%;
+  width: 98.5%;
   height:100%;
 }
   &__grid {
@@ -44,7 +46,7 @@
   grid-template-columns: 100%;
   grid-template-rows: repeat(4, 1fr);
   grid-auto-rows: 100px;
-  grid-gap: 1em;
+  grid-gap: 0.6em;
   margin-right: 10px;
   margin-left: 10px;
 
@@ -75,14 +77,14 @@
 
 .course__grid-4-content {
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: repeat(12, 1fr);
 
   &-cardnumber{
       grid-column:1;
       grid-row:1;
   }
   &-cardnumber-input{
-    grid-column:3/7;
+    grid-column:4/13;
     grid-row:1;
   }
   &-cardowner{
@@ -90,7 +92,7 @@
     grid-row:2;
   }
   &-cardowner-input{
-    grid-column:3/7;
+    grid-column:4/13;
     grid-row:2;
   }
   &-col-1{
@@ -98,21 +100,21 @@
     grid-row:3;
   }
   &-col-2{
-    grid-column:2/3;
+    grid-column:5;
     grid-row:3;
     text-align:center;
   }
   &-col-3{
-    grid-column:3/4;
+    grid-column:6/8;
     grid-row:3;
   }
   &-col-4{
-    grid-column:4/5;
+    grid-column:9;
     grid-row:3;
     text-align:center;
   }
   &-col-5{
-    grid-column:5/6;
+    grid-column:10/12;
     grid-row:3;
   } 
 }
