Lagaði @Media(max-width) með nýrri breytu $beforeFirst

--- a/scss/config.scss
+++ b/scss/config.scss
@@ -8,6 +8,7 @@ $gutter : 20px;
 $Oswald : "Oswald", sans-serif;
 $Open : "Open Sans", serif;
 $transition: 200ms ease-in-out 0s;
+$beforeFirst: 799px;
 $firstSwitch: 800px;
 $secondSwitch: 1200px;
 
