--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -10,14 +10,21 @@
   .footer {
     &__row {
       display: flex;
-      @include maxWidth;
+      max-width: 1240px;
       justify-content: space-between;
       font-family: helvetica;
       width: 100%;
+      padding-left: 0.5*$gutter;
+      padding-right: 0.5*$gutter;
       
       flex-direction: column;
       @media(min-width: $secondSwitch){
         flex-direction: row;
+      }
+      @media (min-width:$secondSwitch){
+        margin-left: -10px;
+        margin-right:-10px;
+
       }
       
     }
@@ -47,11 +54,17 @@
     &__combined{
       display:flex;
       justify-content: space-around;
-      margin-left:0.5*$gutter;
+      @media (min-width:$secondSwitch){
+        
+      width: 50%;
+      justify-content: start;
+      }
     }
 
     &__col{
       width:50%;
+      margin-left: 0.5*$gutter;
+      margin-right: 0.5*$gutter;
     }
   }
 
@@ -61,41 +74,6 @@
   }
 }
 
-@media (max-width: $beforeFirst){
-  .footer {
-    // &__row{
-    //   flex-direction: column;
-    // }
 
-    // &__combined{
-    //   display:flex;
-    //   justify-content: space-around;
-    //   margin-left:$gutter;
-    // }
 
-    // &__col{
-    //   width:50%;
-    // }
-  }
-}
-
-@media (min-width:$secondSwitch){
-  .footer {
-    &__row{
-      margin-left: -10px;
-      margin-right:-10px;
-      // flex-direction: row;
-    }
-
-    &__combined{
-      display: flex;
-      width: 50%;
-      justify-content: start;
-    }
-    
-    &__col{
-      width:50%;
-    }
-  }
-}
 
