--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -41,7 +41,7 @@
   }
 }
 
-@media (max-width: $firstSwitch){
+@media (max-width: $secondSwitch){
   .footer {
     &__row{
       flex-direction: column;
@@ -70,6 +70,8 @@
       display: flex;
       width: 50%;
       justify-content: start;
+      margin-left:5px;
+      margin-right:-15px;
     }
     
     &__col{
